# colibri-core

./: .clang-format  .gitignore  .travis.yml  AUTHORS  Dockerfile  Doxyfile  MANIFEST.in  Makefile.am  README  README.md  README.rst  _config.yml  benchmarks.py  benchmarks.sh  bootstrap  brainstorm2  codemeta.json  codereview_input  colibri-core.pc.in  colibri_webgraphview.py  colibricore-python-tutorial.ipynb  colibricore_alignmodel.pxi  colibricore_classes.in.pxd  colibricore_classes.pxd  colibricore_indexedpatternmodel.pxi  colibricore_patterndict.pxi  colibricore_patternmodel.pxi  colibricore_patternset.pxi  colibricore_relationmap.gcc.pxi  colibricore_relationmap.pxi  colibricore_unindexedpatternmodel.pxi  colibricore_wrapper.in.pyx  colibricore_wrapper.pyx  configure.ac  index.html  makesphinx.sh  pyproject.toml  setup.py  test.py  unordered_map.pxd  (+1 more)
.github/workflows/: cleanup.yml  colibri-core-python.yml  colibri-core.yml  wheels.yml
_layouts/: ilkng.html
capi/html/: SpookyV2_8cpp.html  SpookyV2_8h.html  SpookyV2_8h_source.html  algorithms_8cpp.html  algorithms_8h.html  algorithms_8h_source.html  alignmodel_8h.html  alignmodel_8h_source.html  annotated.html  benchmarks_8cpp.html  benchmarks_8py.html  bz2stream_8h.html  bz2stream_8h_source.html  classAbstractValueHandler-members.html  classAbstractValueHandler.html  classAlignedPatternMap-members.html  classAlignedPatternMap.html  classArrayValueHandler-members.html  classArrayValueHandler.html  classBaseValueHandler-members.html  classBaseValueHandler.html  classClassDecoder-members.html  classClassDecoder.html  classClassEncoder-members.html  classClassEncoder.html  classHashOrderedPatternMap-members.html  classHashOrderedPatternMap.html  classHashOrderedPatternSet-members.html  classHashOrderedPatternSet.html  classIndexPattern-members.html  classIndexPattern.html  classIndexReference-members.html  classIndexReference.html  classIndexedCorpus-members.html  classIndexedCorpus.html  classIndexedCorpus_1_1iterator-members.html  classIndexedCorpus_1_1iterator.html  classIndexedData-members.html  classIndexedData.html  classIndexedDataHandler-members.html  (+174 more)
capi/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+62 more)
capi/latex/: SpookyV2_8cpp.tex  SpookyV2_8h.tex  algorithms_8cpp.tex  algorithms_8h.tex  alignmodel_8h.tex  annotated.tex  benchmarks_8py.tex  bz2stream_8h.tex  classAbstractValueHandler.eps  classAbstractValueHandler.tex  classAlignedPatternMap.eps  classAlignedPatternMap.tex  classArrayValueHandler.eps  classArrayValueHandler.tex  classBaseValueHandler.eps  classBaseValueHandler.tex  classClassDecoder.tex  classClassEncoder.tex  classHashOrderedPatternMap.eps  classHashOrderedPatternMap.tex  classHashOrderedPatternSet.eps  classHashOrderedPatternSet.tex  classIndexPattern.tex  classIndexReference.tex  classIndexedCorpus.tex  classIndexedData.tex  classIndexedDataHandler.eps  classIndexedDataHandler.tex  classIndexedPatternModel.eps  classIndexedPatternModel.tex  classInternalError.eps  classInternalError.tex  classKeyError.eps  classKeyError.tex  classNoSuchPattern.eps  classNoSuchPattern.tex  classPattern.tex  classPatternAlignmentModel.eps  classPatternAlignmentModel.tex  classPatternFeatureVector.tex  (+71 more)
colibricoreX/: webgraphview.py
doc/: .buildinfo  colibricore-python-tutorial.html  genindex.html  index.html  make.sh  objects.inv  search.html  searchindex.js
doc/.doctrees/: environment.pickle  index.doctree
doc/.doctrees/src/sphinx-to-github/: README.doctree
doc/_sources/: index.txt
doc/sources/: conf.py  index.txt
doc/src/: .conf.py.un~  conf.py  index.rst
doc/static/: searchtools.js
exp/: apology.txt  colibri-patternmodeller-test.sh  hamlet.colibri.cls  hamlet.v1.colibri.patternmodel  republic.txt  unigramthreshold.sh  unigramthreshold.txt
include/: Makefile.am  SpookyV2.h  algorithms.h  alignmodel.h  bz2stream.h  classdecoder.h  classencoder.h  common.h  datatypes.h  pattern.h  patternmodel.h  patternstore.h
m4/: ax_cxx_compile_stdcxx_11.m4
scripts/: Makefile.am  colibri-cooc  colibri-coverage  colibri-findpatterns  colibri-freqlist  colibri-histogram  colibri-loglikelihood  colibri-ngrams  colibri-ngramstats  colibri-queryngrams  colibri-reverseindex
src/: Makefile.am  SpookyV2.cpp  algorithms.cpp  benchmarks.cpp  classdecode.cpp  classdecoder.cpp  classencode.cpp  classencoder.cpp  common.cpp  comparemodels.cpp  datatypes.cpp  extractngrams.cpp  grep.cpp  modelcompare.cpp  pattern.cpp  patternmodel.cpp  patternmodeller.cpp  patternstore.cpp  test.cpp  tst.sh
style/: custom.css  ilkng.css  lamalayout.css
