# $Id: Makefile.am 13188 2011-09-15 13:46:53Z sloot $
# $URL: https://ilk.uvt.nl/svn/sources/ucto/trunk/Makefile.am $

ACLOCAL_AMFLAGS = -I m4 --install

SUBDIRS = src include 

#EXTRA_DIST = bootstrap AUTHORS TODO NEWS ucto.pc.in ucto-icu.pc.in

#pkgconfigdir = $(libdir)/pkgconfig
#pkgconfig_DATA = ucto.pc ucto-icu.pc

#ChangeLog: NEWS
#	svn update; svn2cl --include-rev
