# $Id: Makefile.am 13188 2011-09-15 13:46:53Z sloot $
# $URL: https://ilk.uvt.nl/svn/sources/ucto/trunk/Makefile.am $

ACLOCAL_AMFLAGS = -I m4 --install

SUBDIRS = src include scripts

EXTRA_DIST = bootstrap AUTHORS TODO NEWS colibri-core.pc.in codemeta.json

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = colibri-core.pc

